--- a/A2.1900157/MyPapk3-sqlite-crud/package.json
+++ b/A2.1900157/MyPapk3-sqlite-crud/package.json
@@ -50,7 +50,6 @@
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
     "cordova-android": "^9.1.0",
-    "cordova-browser": "^6.0.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
@@ -87,8 +86,7 @@
       "cordova-sqlite-storage": {}
     },
     "platforms": [
-      "android",
-      "browser"
+      "android"
     ]
   }
 }
