--- a/A2.1900098/MyPapk3-sqlite-crud/package.json
+++ b/A2.1900098/MyPapk3-sqlite-crud/package.json
@@ -19,11 +19,11 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
-    "@capacitor/app": "1.0.5",
-    "@capacitor/core": "3.2.5",
-    "@capacitor/haptics": "1.1.2",
-    "@capacitor/keyboard": "1.1.2",
-    "@capacitor/status-bar": "1.0.5",
+    "@capacitor/app": "1.0.6",
+    "@capacitor/core": "3.3.1",
+    "@capacitor/haptics": "1.1.3",
+    "@capacitor/keyboard": "1.1.3",
+    "@capacitor/status-bar": "1.0.6",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/sqlite": "^5.36.0",
     "@ionic/angular": "^5.5.2",
@@ -42,9 +42,8 @@
     "@angular/compiler": "~12.1.1",
     "@angular/compiler-cli": "~12.1.1",
     "@angular/language-service": "~12.0.1",
-    "@capacitor/cli": "3.2.5",
+    "@capacitor/cli": "3.3.1",
     "@ionic/angular-toolkit": "^4.0.0",
-    "@ionic/lab": "3.2.10",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -83,7 +82,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "android"
